@@ -7,6 +7,8 @@ New for version ...:
  - Alternative hex output (to be improved)
  - Print creation date of serial device file (if < 20 hrs), useful for
    identifying just plugged in USB-Serial adapters 
+ - Support ':' (colon) in device path names. Note, that this changes old
+   behaviour which used ':' as a device path delimiter.
 
 New for version 2.6:
  - Add possibility to add delay after every character transmission.
